Fixed notch and rounded corners issues on iphones.

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 
   .main-content {
     flex-grow: 1;
